<resources>
    <string name="app_name">NicoNewsViewer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_anime">Game / Anime</string>
    <string name="society">Politics / Society</string>
    <string name="business">Business</string>
    <string name="overseas">Overseas</string>
    <string name="sports">Sports</string>
    <string name="entame">Entertainment</string>
    <string name="net">Internet / Science</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="category">Category</string>
    <string name="ranking">Ranking</string>
    <string name="all_news">All News</string>
    <string name="all_news_new">New arrival order</string>
    <string name="all_news_comment_count">Number of comments</string>
    <string name="all_news_comment_new">Arrival order of comments</string>
    <string name="hour">Every hour</string>
    <string name="hour_24">24hours</string>
    <string name="comment">Comment</string>
</resources>
